more memory for tests